--- a/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Restaurant/Views/Shared/_Layout.cshtml
@@ -67,6 +67,11 @@
 			</ul>
 		  </li>
 		  <li><a href="#contact">Contact</a></li>
+			<li>
+				<form asp-controller="Account" asp-action="LogOff">
+					<input type="submit" class="btn btn-primary" value="Sign Out" />
+				</form>
+			</li>
 		</ul>
 		<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 	  </nav>
