--- a/Restaurant/Views/Account/Login.cshtml
+++ b/Restaurant/Views/Account/Login.cshtml
@@ -1,26 +1,52 @@
 ﻿@using Restaurnat.BLL.ModelVM.Account
 @model LoginVM
 
-<!-- Section Title -->
-<div class="container section-title">
-	<h2>Login<br></h2>
-	<p><span>Learn More</span> <span class="description-title">About Us</span></p>
-</div><!-- End Section Title -->
+<section id="login" class="book-a-table section">
 
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-<form asp-action="Login" asp-controller="Account">
-  
-	<div class="mb-3">
-		<label asp-for="UserName" class="form-label">UserName</label>
-		<input asp-for="UserName" class="form-control" />
-		<span asp-validation-for="UserName" class="text-danger"></span>
-	</div>
-	
-	<div class="mb-3">
-		<label asp-for="password" class="form-label">Password</label>
-		<input type="password" asp-for="password" class="form-control" />
-		<span asp-validation-for="password" class="text-danger"></span>
-	</div>
-	
-	<button type="submit" class="btn btn-primary">Login</button>
-</form>
+    <div class="row gy-5 mb-5">
+      <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+        <div class="reservation-info">
+          <div class="text-content">
+            <h3>Welcome Back</h3>
+            <p>Please log in with your credentials to continue.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12" data-aos="fade-up" data-aos-delay="400">
+        <div class="reservation-form-wrapper">
+          <div class="form-header">
+            <h3>Login</h3>
+            <p>Enter your username and password</p>
+          </div>
+
+          <form asp-controller="Account" asp-action="Login" method="post">
+            <div class="row gy-4">
+
+              <div class="col-lg-12 form-group">
+                <input asp-for="UserName" class="form-control" placeholder="Username" required />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-12 form-group">
+                <input asp-for="password" type="password" class="form-control" placeholder="Password" required />
+                <span asp-validation-for="password" class="text-danger"></span>
+              </div>
+
+            </div>
+
+            <div class="text-center mt-4">
+              <button type="submit" class="btn-book-table">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</section><!-- /Login Section -->
