--- a/Restaurant/Views/Account/Register.cshtml
+++ b/Restaurant/Views/Account/Register.cshtml
@@ -1,60 +1,88 @@
 ﻿@using Restaurnat.BLL.ModelVM.Account
 @model RegisterVM
 
-<!-- Section Title -->
-<div class="container section-title">
-	<h2>Register<br></h2>
-	<p><span>Learn More</span> <span class="description-title">About Us</span></p>
-</div><!-- End Section Title -->
+<section id="register" class="book-a-table section">
 
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-<form asp-action="Register" asp-controller="Account">
-   <div class="mb-3">
-		<label asp-for="first_name" class="form-label">First Name</label>
-		<input asp-for="first_name" class="form-control" />
-		<span asp-validation-for="first_name" class="text-danger"></span>
-	</div>
+    <div class="row gy-5 mb-5">
+      <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+        <div class="reservation-info">
+          <div class="text-content">
+            <h3>Create Your Account</h3>
+            <p>Please fill in the form to register and start using our services.</p>
+          </div>
+        </div>
+      </div>
 
-	<div class="mb-3">
-		<label asp-for="last_name" class="form-label">Last Name</label>
-		<input asp-for="last_name" class="form-control" />
-		<span asp-validation-for="last_name" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="UserName" class="form-label">UserName</label>
-		<input asp-for="UserName" class="form-control" />
-		<span asp-validation-for="UserName" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="email" class="form-label">Email</label>
-		<input type="email" asp-for="email" class="form-control" />
-		<span asp-validation-for="email" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="password" class="form-label">Password</label>
-		<input type="password" asp-for="password" class="form-control" />
-		<span asp-validation-for="password" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="age" class="form-label">Age</label>
-		<input asp-for="age" class="form-control" />
-		<span asp-validation-for="age" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="country" class="form-label">Country</label>
-		<input asp-for="country" class="form-control" />
-		<span asp-validation-for="country" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="city" class="form-label">City</label>
-		<input asp-for="city" class="form-control" />
-		<span asp-validation-for="city" class="text-danger"></span>
-	</div>
-	<div class="mb-3">
-		<label asp-for="street" class="form-label">Street</label>
-		<input asp-for="street" class="form-control" />
-		<span asp-validation-for="street" class="text-danger"></span>
-	</div>
+     </div>
 
-	<button type="submit" class="btn btn-primary">Register</button>
-</form>
+    <div class="row">
+      <div class="col-12" data-aos="fade-up" data-aos-delay="400">
+        <div class="reservation-form-wrapper">
+          <div class="form-header">
+            <h3>Register</h3>
+            <p>Fill in the details below to create your account</p>
+          </div>
+
+         <form asp-controller="Account" asp-action="Register" method="post">
+            <div class="row gy-4">
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="first_name" class="form-control" placeholder="First Name" required />
+                <span asp-validation-for="first_name" class="text-danger"></span>  
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="last_name" class="form-control" placeholder="Last Name" required />
+                <span asp-validation-for="last_name" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="UserName" class="form-control" placeholder="Username" required />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="email" class="form-control" placeholder="Email" required />
+                <span asp-validation-for="email" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="password" type="password" class="form-control" placeholder="Password" required />
+                <span asp-validation-for="password" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="age" type="number" class="form-control" placeholder="Age" required />
+                <span asp-validation-for="age" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="country" class="form-control" placeholder="Country" required />
+                <span asp-validation-for="country" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-6 form-group">
+                <input asp-for="city" class="form-control" placeholder="City" required />
+                <span asp-validation-for="city" class="text-danger"></span>
+              </div>
+
+              <div class="col-lg-12 form-group">
+                <input asp-for="street" class="form-control" placeholder="Street" required />
+                <span asp-validation-for="street" class="text-danger"></span>
+              </div>
+
+            </div>
+
+            <div class="text-center mt-4">
+              <button type="submit" class="btn-book-table">Register</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</section><!-- /Register Section -->
