--- a/Restaurant/Views/Profile/Index.cshtml
+++ b/Restaurant/Views/Profile/Index.cshtml
@@ -9,7 +9,9 @@
     <div class="container" data-aos="fade-up">
         <div class="row g-4 align-items-center">
             <div class="col-lg-4 text-center">
-                <img src="~/Files/@Model.imagepath" alt="Profile Picture" class="img-fluid rounded-3" style="max-width: 250px;">
+                <img src="~/Files/@Model.imagepath"  alt="Profile Picture" 
+     class="img-fluid rounded-circle" 
+     style="width: 200px; height: 200px; object-fit: cover;">
             </div>
             <div class="col-lg-8">
                 <h2>@Model.first_name @Model.last_name</h2>
