--- a/Restaurant/wwwroot/assets/css/admin.css
+++ b/Restaurant/wwwroot/assets/css/admin.css
@@ -1,30 +1,23 @@
-﻿body {
-    overflow-x: hidden;
-}
-
-#wrapper {
-    display: flex;
-    width: 100%;
+﻿body, #page-content-wrapper {
+    background-color: #1c1c1c !important;
+    color: #fff;
 }
 
 #sidebar-wrapper {
-    min-width: 250px;
-    max-width: 250px;
-    transition: all 0.3s;
+    background-color: #222 !important;
+    color: #fff;
 }
 
-#wrapper.toggled #sidebar-wrapper {
-    margin-left: -250px;
+    #sidebar-wrapper .list-group-item {
+        background-color: #222 !important;
+        color: #fff !important;
+    }
+
+.navbar {
+    background-color: #333 !important;
+    color: #fff !important;
 }
 
-#page-content-wrapper {
-    width: 100%;
-}
-
-.list-group-item {
-    border: none;
-}
-
-    .list-group-item:hover {
-        background-color: #343a40;
+    .navbar .navbar-text {
+        color: #fff !important;
     }
