--- a/Restaurant/Views/Shared/_AdminLayout.cshtml
+++ b/Restaurant/Views/Shared/_AdminLayout.cshtml
@@ -17,6 +17,7 @@
             <div class="list-group list-group-flush">
                 <a asp-controller="Admin" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Dashboard</a>
                 <a asp-controller="AdminUser" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Users</a>
+                <a asp-controller="Item" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Items</a>
                 <a asp-controller="Reservation" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Reservations</a>
                 <a asp-controller="Menu" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Menu</a>
                 <a asp-controller="Event" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Events</a>
