--- a/Restaurant/Views/Chef/Edit.cshtml
+++ b/Restaurant/Views/Chef/Edit.cshtml
@@ -1,88 +1,86 @@
 ﻿@using Restaurnat.BLL.ModelVM.Chef
 @model GetChefVM
 
-@{
-    ViewData["Title"] = "Edit Chef";
-    // Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
-<div class="card shadow-sm border-0 rounded-3" style="max-width: 40rem; margin: auto;">
-    <div class="card-header bg-primary text-white fw-bold">
-        Create Chef
-    </div>
+<section id="createChef" class="CreateChef section">
+<div class="container" data-aos="fade-up" @* data-aos-delay="100" *@>
+<div class="row gy-5 mb-5">
+      <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+        <div class="reservation-info">
+          <div class="text-content">
+            <h3>Create Chef - Admin</h3>
+            <p>Add new Chef to your Staff.</p>
+          </div>
+        </div>
+      </div>
+     </div>
+
+<div class="row">
+      <div class="col-12" data-aos="fade-up" data-aos-delay="400">
+        <div>
 
     <form asp-controller="Chef" asp-action="Edit" enctype="multipart/form-data">
-        <div class="mb-3">
-            <label class="form-label">Chef ID</label>
+        @if (!string.IsNullOrEmpty(Model.imagepath))
+        {
+                            <img src="~/Files/@Model.imagepath" alt="Chef Image" style="width:170px; height:170px; object-fit:cover; border-radius:50%;" />
+        }
+        else
+        {
+                <span class="text-muted">No Image</span>
+        }
+        <div class="row gy-4">
+            <div class="col-lg-6 form-group">
+             <label class="form-label">Chef ID</label>
             <input type="text" class="form-control" name="id"  value="@Model.chef_id" readonly />
-            <input type="hidden" asp-for="chef_id" />
-        </div>
-        <div class="mb-3">
+            <input type="hidden" asp-for="chef_id" /> 
+            </div>
+
+        <div class="col-lg-6 form-group">
             <label asp-for="name" class="form-label"></label>
             <input asp-for="name" type="text" class="form-control" />
             <span asp-validation-for="name" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
+        <div class="col-lg-6 form-group">
             <label asp-for="age" class="form-label"></label>
             <input asp-for="age" type="number" class="form-control" />
             <span asp-validation-for="age" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
+        <div class="col-lg-6 form-group">
             <label asp-for="about" class="form-label"></label>
             <textarea asp-for="about" class="form-control" rows="3"></textarea>
             <span asp-validation-for="about" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label asp-for="categoryId" class="form-label">Category</label>
+        <div class="col-lg-6 form-group">
+            <label asp-for="categoryId" class="form-label">Chef Role</label>
             <select asp-for="categoryId" class="form-select">
                 <option value="-1">Training / General</option>
-                <option value="1">Desserts</option>
-                <option value="2">Grill</option>
-                <option value="3">Seafood</option>
+                        <option value="1">Master</option>
+                        <option value="2">Supervisor</option>
+                        <option value="3">Leader</option>
                 <!-- add more categories as needed -->
             </select>
             <span asp-validation-for="categoryId" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
+       <div class="col-lg-6 form-group">
             <label asp-for="experience_years" class="form-label"></label>
             <input asp-for="experience_years" type="number" class="form-control" />
             <span asp-validation-for="experience_years" class="text-danger"></span>
         </div>
 
-        <div class="mb-3 form-check">
+        <div class="col-lg-6 form-check">
             <input asp-for="work_now" class="form-check-input" type="checkbox" />
             <label asp-for="work_now" class="form-check-label"></label>
         </div>
-        @if (!string.IsNullOrEmpty(Model.imagepath))
-        {
-              <img src="~/Files/@Model.imagepath" alt="Chef Image" style="width:70px; height:70px; object-fit:cover; border-radius:50%;" />
-        }
-        else
-        {
-           <span class="text-muted">No Image</span>
-        }
-        <div class="mb-3">
+        
+        <div class="col-lg-6 form-group">
             <label for="img" class="form-label">Chef Image</label>
             <input type="file" name="img" class="form-control" id="img" />
             <span asp-validation-for="imagepath" class="text-danger"></span>
         </div>
-
-        <div class="mb-3">
-            <label asp-for="restaurant_id" class="form-label">Restaurant</label>
-            <select asp-for="restaurant_id" class="form-select">
-                <option value="">-- Select Restaurant --</option>
-                <option value=1>Restaurant A</option>
-                <option value=2>Restaurant A</option>
-                <option value=3>Restaurant B</option>
-                <!-- Fill from DB in real case -->
-            </select>
-            <span asp-validation-for="restaurant_id" class="text-danger"></span>
-        </div>
-
 
         <button type="submit" class="btn btn-primary">Edit Chef</button>
     </form>
