--- a/Restaurant/Views/Chef/Index.cshtml
+++ b/Restaurant/Views/Chef/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿    <!-- Chefs Section -->
+
+@using Restaurnat.BLL.ModelVM.Chef
+@model List<GetChefVM>
+
     <section id="chefs" class="chefs section">
 
       <!-- Section Title -->
@@ -10,105 +14,40 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row">
-          <div class="col-lg-5">
-            <div class="chef-highlight" data-aos="fade-right" data-aos-delay="200">
-              <figure class="chef-image">
-                <img src="assets/img/restaurant/chef-1.webp" class="img-fluid" alt="Executive Chef">
-              </figure>
-              <div class="chef-details">
-                <h3>Executive Chef</h3>
-                <h2>Gabriel Turner</h2>
-                <div class="chef-awards">
-                  <span><i class="bi bi-star-fill"></i> James Beard Award</span>
-                  <span><i class="bi bi-star-fill"></i> Two Michelin Stars</span>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor nisi elit.</p>
-                <div class="chef-signature">
-                  <img src="assets/img/misc/signature-1.webp" alt="Chef Signature">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-7">
-            <div class="team-container" data-aos="fade-left" data-aos-delay="300">
-              <div class="row g-4">
-                <div class="col-md-6">
-                  <div class="chef-card" data-aos="zoom-in" data-aos-delay="200">
-                    <div class="chef-img">
-                      <img src="assets/img/restaurant/chef-2.webp" class="img-fluid" alt="Chef Portrait">
-                      <div class="social-links">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                      </div>
-                    </div>
-                    <div class="chef-info">
-                      <h4>Sophia Martinez</h4>
-                      <p class="role">Pastry Chef</p>
-                      <p class="details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus a ipsum faucibus, et porttitor.</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div class="chef-card" data-aos="zoom-in" data-aos-delay="250">
-                    <div class="chef-img">
-                      <img src="assets/img/restaurant/chef-3.webp" class="img-fluid" alt="Chef Portrait">
-                      <div class="social-links">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                      </div>
-                    </div>
-                    <div class="chef-info">
-                      <h4>Marcus Chen</h4>
-                      <p class="role">Sous Chef</p>
-                      <p class="details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus a ipsum faucibus, et porttitor.</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div class="chef-card" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="chef-img">
-                      <img src="assets/img/restaurant/chef-4.webp" class="img-fluid" alt="Chef Portrait">
-                      <div class="social-links">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                      </div>
-                    </div>
-                    <div class="chef-info">
-                      <h4>Jonathan Williams</h4>
-                      <p class="role">Head of Bar</p>
-                      <p class="details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus a ipsum faucibus, et porttitor.</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div class="chef-card" data-aos="zoom-in" data-aos-delay="350">
-                    <div class="chef-img">
-                      <img src="assets/img/restaurant/chef-5.webp" class="img-fluid" alt="Chef Portrait">
-                      <div class="social-links">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-twitter-x"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                      </div>
-                    </div>
-                    <div class="chef-info">
-                      <h4>Isabella Romano</h4>
-                      <p class="role">Grill Master</p>
-                      <p class="details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim purus a ipsum faucibus, et porttitor.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+            @if (Model != null && Model.Any())
+            {
+                foreach (var chef in Model)
+                {
+                    if (!chef.IsDeleted)
+                    {
+                      <div class="col-md-6">
+                          <div class="chef-card" data-aos="zoom-in" data-aos-delay="300">
+                           <div class="chef-img">
+                               <img src="~/Files/@chef.imagepath" class="img-fluid" alt="Chef Image" style="/* width:100px; height:100px; */ object-fit:cover; /* border-radius:10% */;" />
+                              <div class="social-links">
+                                <a href="#"><i class="bi bi-instagram"></i></a>
+                                <a href="#"><i class="bi bi-twitter-x"></i></a>
+                                <a href="#"><i class="bi bi-facebook"></i></a>
+                              </div>
+                            </div>
+                            <div class="chef-info">
+                                <h4>@chef.name</h4>
+                                <p class="role">@chef.category</p>
+                                <p class="details">@chef.about</p>
+                            </div>
+                        </div>
+                        </div>  
+                    }
+                    
+                }
+            }
+            else
+            {
+             <div class="container section-title" data-aos="fade-up">
+              <h2>No Chefs Found</h2>
+             </div>
+            }
       </div>
+    </div>
 
     </section><!-- /Chefs Section -->
