--- a/Restaurant/Views/Shared/_AdminLayout.cshtml
+++ b/Restaurant/Views/Shared/_AdminLayout.cshtml
@@ -20,6 +20,7 @@
                 <a asp-controller="Item" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Items</a>
                 <a asp-controller="AdminReservation" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Reservations</a>
                 <a asp-controller="Menu" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Menu</a>
+                <a asp-controller="Chef" asp-action="GetAll" class="list-group-item list-group-item-action bg-dark text-white">Chefs</a>
                 <a asp-controller="Event" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Events</a>
                 <a asp-controller="Home" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white">Restaurant</a>
                 <a asp-controller="Account" asp-action="LogOff" class="list-group-item list-group-item-action bg-dark text-white">Logout</a>
